--- a/app.json
+++ b/app.json
@@ -4,38 +4,36 @@
     "slug": "seroapp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "icon": "./assets/seroimg.png",
+    "userInterfaceStyle": "light",
+    "splash": {
+      "image": "./assets/seroimg.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/seroimg.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.seroapp.app",
+      "versionCode": 1
     },
     "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/seroimg.png"
     },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ]
-    ],
-    "experiments": {
-      "typedRoutes": true
+    "entryPoint": "./index.js",
+    "newArchEnabled": true,
+    "extra": {
+      "eas": {
+        "projectId": "cbda0e15-f3a1-4bce-95f3-cd366553249e"
+      }
     }
   }
 }
